[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/containers/Placeholder_540-540_cuatro.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/icons/icons/Configuracion/engrane blanco.png" type="Texture" id=3]
[ext_resource path="res://ui/reusableWindows/settingScreen.gd" type="Script" id=4]
[ext_resource path="res://assets/icons/icons/Configuracion/tutoriales.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/icons/Equis y palomitas/equis irregular roja.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/icons/Equis y palomitas/equis regular roja.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/icons/Configuracion/creditos blancos.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/icons/Configuracion/creditos sin marco 2.png" type="Texture" id=9]
[ext_resource path="res://ui/reusableWindows/creditScreen.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 540, 540 )

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/advanced_pixel-7.ttf"

[sub_resource type="DynamicFont" id=4]
size = 72
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/advanced_pixel-7.ttf"

[sub_resource type="DynamicFont" id=6]
size = 52
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/fonts/advanced_pixel-7.ttf"

[sub_resource type="DynamicFont" id=8]
size = 52
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[sub_resource type="StyleBoxTexture" id=9]

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/fonts/advanced_pixel-7.ttf"

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=13]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.156863 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/MenuBackground:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 50 ), Vector2( 2130, 50 ) ]
}

[node name="settingScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 960.0
margin_top = -540.0
margin_right = 2880.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.594604
margin_top = -3.4054
margin_right = 0.594604
margin_bottom = -3.4054
disabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.594604
margin_top = -3.4054
margin_right = 0.594604
margin_bottom = -3.4054
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MenuBackground" type="Panel" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -576.001
margin_top = -432.0
margin_right = 576.001
margin_bottom = 432.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Head" type="Control" parent="ColorRect/MenuBackground"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confIcon" type="Sprite" parent="ColorRect/MenuBackground/Head"]
position = Vector2( 206.5, 80 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="confIcon2" type="Sprite" parent="ColorRect/MenuBackground/Head"]
position = Vector2( 946.5, 80 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="confLabel" type="Label" parent="ColorRect/MenuBackground/Head"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = 325.0
margin_top = 46.8
margin_right = 827.0
margin_bottom = 118.8
custom_fonts/font = SubResource( 2 )
text = "Configuración del juego"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BGM" type="Control" parent="ColorRect/MenuBackground"]
anchor_left = 0.5
anchor_top = 0.224
anchor_right = 0.5
anchor_bottom = 0.224
margin_left = -20.0
margin_top = -20.2969
margin_right = 20.0
margin_bottom = 19.7031

[node name="SonidoLabel" type="Label" parent="ColorRect/MenuBackground/BGM"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -31.5
margin_right = 72.0
margin_bottom = 31.5
custom_fonts/font = SubResource( 4 )
text = "Música"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bgmVolume" type="HSlider" parent="ColorRect/MenuBackground/BGM"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = 40.0
margin_right = 251.0
margin_bottom = 80.0
size_flags_vertical = 2
min_value = -70.0
max_value = 0.0
value = -30.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VolumenLabel" type="Label" parent="ColorRect/MenuBackground/BGM"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -388.287
margin_top = 7.5
margin_right = -266.287
margin_bottom = 59.5
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Volumen:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeValue" type="Label" parent="ColorRect/MenuBackground/BGM"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 268.865
margin_top = 27.5
margin_right = 322.865
margin_bottom = 79.5
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "80"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="Control" parent="ColorRect/MenuBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SonidoLabel2" type="Label" parent="ColorRect/MenuBackground/SFX"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.9999
margin_top = -99.5643
margin_right = 82.0001
margin_bottom = -27.5643
custom_fonts/font = SubResource( 4 )
text = "Sonidos"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXValue" type="HSlider" parent="ColorRect/MenuBackground/SFX"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = -46.0
margin_right = 251.0
margin_bottom = 47.0
size_flags_vertical = 2
min_value = -70.0
max_value = 0.0
value = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutoriales" type="Label" parent="ColorRect/MenuBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = 80.2653
margin_right = 88.0
margin_bottom = 143.265
custom_fonts/font = SubResource( 4 )
text = "Tutoriales"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/MenuBackground/Tutoriales"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -455.136
margin_top = 36.0
margin_right = 461.864
margin_bottom = 143.0
custom_fonts/font = SubResource( 8 )
text = "Selecciona si deseas que el juego muestre o no los tutoriales de los minijuegos."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="tutoriales" type="Sprite" parent="ColorRect/MenuBackground/Tutoriales/Label"]
position = Vector2( 232.533, -26.8295 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="CheckBox" type="CheckBox" parent="ColorRect/MenuBackground/Tutoriales/Label"]
anchor_left = 0.5
anchor_top = 1.581
anchor_right = 0.5
anchor_bottom = 1.581
margin_left = -87.5
margin_top = -18.011
margin_right = -37.5
margin_bottom = 31.989
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 11 )
text = "Sí"
align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="ColorRect/MenuBackground/Tutoriales/Label"]
anchor_left = 0.5
anchor_top = 1.581
anchor_right = 0.5
anchor_bottom = 1.581
margin_left = 54.5
margin_top = -18.011
margin_right = 105.5
margin_bottom = 31.989
custom_fonts/font = SubResource( 11 )
text = "No"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="ColorRect/MenuBackground"]
margin_right = 64.0
margin_bottom = 66.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditos" type="TextureButton" parent="ColorRect/MenuBackground"]
margin_left = 115.0
margin_top = 691.0
margin_right = 218.0
margin_bottom = 793.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/MenuBackground/Creditos"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -16.0
margin_right = 47.5
margin_bottom = 23.0
custom_fonts/font = SubResource( 12 )
text = "Créditos"
align = 1
valign = 1

[node name="creditScreen" parent="ColorRect" instance=ExtResource( 10 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.595
margin_top = -239.595
margin_right = 431.405
margin_bottom = 246.405

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enterScrn = SubResource( 13 )
anims/outScreen = SubResource( 14 )
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="value_changed" from="ColorRect/MenuBackground/BGM/bgmVolume" to="." method="_on_bgmVolume_value_changed"]
[connection signal="value_changed" from="ColorRect/MenuBackground/SFX/SFXValue" to="." method="_on_SFXValue_value_changed"]
[connection signal="pressed" from="ColorRect/MenuBackground/Tutoriales/Label/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="ColorRect/MenuBackground/Tutoriales/Label/CheckBox2" to="." method="_on_CheckBox2_pressed"]
[connection signal="pressed" from="ColorRect/MenuBackground/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="ColorRect/MenuBackground/Creditos" to="." method="_on_Creditos_pressed"]
